--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  cupertino_icons: ^1.0.2
   velocity_x: ^4.1.0
   get: ^4.6.5
   cloud_firestore: ^4.8.2
@@ -39,11 +40,9 @@ dependencies:
   path: ^1.8.3
   firebase_core: ^2.14.0
   intl: ^0.18.1
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
-
+  file_picker: ^4.3.0
+  file_selector: ^1.0.0
+  url_launcher: ^6.1.12
 
 dev_dependencies:
   flutter_test:
